--- a/public/css/colors/green.css
+++ b/public/css/colors/green.css
@@ -26,7 +26,7 @@ body {
   color: #ffffff;
 }
 .navbar-header {
-  background: #3cd0cc;
+  background: #1bd499;
 }
 .navbar-top-links > li > a {
   color: #ffffff;
