--- a/public/less/colors/green.less
+++ b/public/less/colors/green.less
@@ -2,13 +2,13 @@
 
 /*Just change your choise color here its theme Colors*/
 
-@topbar:#3cd0cc;
+@topbar:#1bd499;
 @sidebar:#fff;
 @bodycolor:#f1f2f7;
 @headingtext: #2b2b2b;
 @bodytext: #686868;
 @sidebar-text:#54667a;
-@themecolor:#3cd0cc;
+@themecolor:#1bd499;
 @dark-themecolor:#4F5467;
 
 
